[package]
name = "json-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.199", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.116", default-features = false, features = ["std"] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", default-features = false, features = ["macros", "rt-multi-thread", "sync", "io-util", "fs"] }
